--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body, html {
   letter-spacing: 0em;
   text-align: left;
   color: #3C57B7;
-  background-color: #FBC341;
+  background-color: transparent;
   border: none;
   outline: none;
   margin-top: 3px;
@@ -1025,8 +1025,17 @@ body, html {
 }
 
 @media (max-width: 1280px) {
+  .header .blacklist {
+    background-size: contain;
+  }
+
   .section-work h1 {
     font-size: 40px;
+  }
+  .section-work .work {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   .section-work .work .num {
     margin-top: 95px;
