--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,19 @@ body, html {
   letter-spacing: 0em;
   text-align: left;
   padding-left: 177px;
+  display: inline-block;
+}
+.section-worst h2 {
+  float: right;
+  display: inline-block;
+  font-family: Montserrat Alternates;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: right;
+  padding-right: 65px;
+  color: rgba(0, 0, 0, 0.14);
 }
 .section-worst p {
   font-family: Montserrat Alternates;
@@ -517,6 +530,19 @@ body, html {
   letter-spacing: 0em;
   text-align: left;
   padding-left: 177px;
+  display: inline-block;
+}
+.section-board h2 {
+  float: right;
+  display: inline-block;
+  font-family: Montserrat Alternates;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: right;
+  padding-right: 65px;
+  color: rgba(0, 0, 0, 0.14);
 }
 .section-board p {
   font-family: Montserrat Alternates;
@@ -971,6 +997,7 @@ body, html {
 
 .section-verified {
   margin-top: 40px;
+  margin-bottom: 400px;
 }
 .section-verified .verified {
   margin-bottom: 43px;
@@ -1133,6 +1160,38 @@ body, html {
   .section-safety .safety .safe .documents {
     margin-top: 20px;
     margin-left: 401px;
+  }
+}
+@media (max-width: 768px) {
+  .section-work .work .num {
+    margin-top: 140px;
+    margin-left: 0;
+    width: 20px;
+    height: 30px;
+  }
+  .section-work .work .two {
+    margin-left: 199px;
+    margin-top: 151px;
+  }
+  .section-work .work .three {
+    margin-left: 210px;
+    margin-top: 178px;
+  }
+  .section-work .work img {
+    display: none;
+  }
+  .section-work .work p {
+    top: 135px;
+    left: 38px;
+    line-height: 0;
+  }
+  .section-work .work .p-two {
+    top: 154px;
+    left: 255px;
+  }
+  .section-work .work .p-three {
+    top: 181px;
+    left: 503px;
   }
 }
 
