--- a/css/style.scss
+++ b/css/style.scss
@@ -245,6 +245,19 @@ body,html {
     letter-spacing: 0em;
     text-align: left;
     padding-left: 177px;
+    display: inline-block;
+  }
+  h2 {
+    float: right;
+    display: inline-block;
+    font-family: Montserrat Alternates;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0em;
+    text-align: right;
+    padding-right: 65px;
+    color: rgba(0, 0, 0, 0.14);
   }
   p{
     font-family: Montserrat Alternates;
@@ -545,6 +558,19 @@ body,html {
     letter-spacing: 0em;
     text-align: left;
     padding-left: 177px;
+    display: inline-block;
+  }
+  h2 {
+    float: right;
+    display: inline-block;
+    font-family: Montserrat Alternates;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: 0em;
+    text-align: right;
+    padding-right: 65px;
+    color: rgba(0, 0, 0, 0.14);
   }
   p{
     font-family: Montserrat Alternates;
@@ -1034,6 +1060,7 @@ body,html {
 }
 .section-verified {
   margin-top: 40px;
+  margin-bottom: 400px;
   .verified {
     margin-bottom: 43px;
     select {
@@ -1218,6 +1245,42 @@ body,html {
           margin-top: 20px;
           margin-left: 401px;
         }
+      }
+    }
+  }
+}
+@media (max-width: 768px) {
+  .section-work {
+    .work {
+      .num {
+        margin-top: 140px;
+        margin-left: 0;
+        width: 20px;
+        height: 30px;
+      }
+      .two{
+        margin-left: 199px;
+        margin-top: 151px;
+      }
+      .three{
+        margin-left: 210px;
+        margin-top: 178px;
+      }
+      img {
+        display: none;
+      }
+      p {
+        top: 135px;
+        left: 38px;
+        line-height: 0;
+      }
+      .p-two{
+        top: 154px;
+        left: 255px;
+      }
+      .p-three {
+        top: 181px;
+        left: 503px;
       }
     }
   }
