--- a/css/style.css
+++ b/css/style.css
@@ -1066,7 +1066,8 @@ body, html {
     margin-left: 311px;
   }
   .header .left-menu .menu .nav__item {
-    padding-right: 25px;
+    padding-left: 26px;
+    padding-right: 0;
   }
   .header .left-menu .menu .nav__link {
     font-size: 14px;
@@ -1162,12 +1163,21 @@ body, html {
     margin-left: 401px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 820px) {
+  .wrap {
+    width: 100%;
+  }
+
+  .section-work .work {
+    padding-left: 10px;
+  }
   .section-work .work .num {
-    margin-top: 140px;
+    margin-top: 144px;
     margin-left: 0;
     width: 20px;
     height: 30px;
+    padding-top: 4px;
+    font-size: 15px;
   }
   .section-work .work .two {
     margin-left: 199px;
@@ -1181,9 +1191,10 @@ body, html {
     display: none;
   }
   .section-work .work p {
-    top: 135px;
+    font-size: 12px;
+    top: 145px;
     left: 38px;
-    line-height: 0;
+    line-height: 1;
   }
   .section-work .work .p-two {
     top: 154px;
@@ -1191,8 +1202,57 @@ body, html {
   }
   .section-work .work .p-three {
     top: 181px;
-    left: 503px;
+    left: 488px;
   }
+  .section-work h1 {
+    font-size: 36px;
+    padding-left: 10px;
+  }
+  .section-work .boss {
+    width: 311px;
+    height: 260px;
+    position: absolute;
+    right: 2px;
+    top: 312px;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  .header .left-menu {
+    display: none;
+  }
+
+  .section-worst .hudshie .worst {
+    width: 100%;
+  }
+
+  .section-board .hudshie .board {
+    width: 100%;
+  }
+}
+.section-estimation .estimat {
+  width: 724px;
+  background-size: contain;
+  font-size: 40px;
+}
+.section-estimation .categories {
+  margin-left: 20px;
+}
+.section-estimation .categories .kat1 div, .section-estimation .categories .kat2 div, .section-estimation .categories .kat4 div {
+  flex-basis: 15px;
+}
+.section-estimation .categories .kat1 div h2, .section-estimation .categories .kat2 div h2, .section-estimation .categories .kat4 div h2 {
+  font-size: 15px;
+}
+.section-estimation .categories .kat1 div a, .section-estimation .categories .kat2 div a, .section-estimation .categories .kat4 div a {
+  font-size: 13px;
+}
+
+.section-safety .safety .safe .documents {
+  margin-left: 0;
+}
+.section-safety .safety .safe .commission {
+  margin-top: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
