--- a/css/style.scss
+++ b/css/style.scss
@@ -1131,7 +1131,8 @@ body,html {
       }
       .menu {
         .nav__item{
-          padding-right: 25px;
+          padding-left: 26px;
+          padding-right: 0;
         }
         .nav__link {
           font-size: 14px;
@@ -1249,14 +1250,20 @@ body,html {
     }
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 820px) {
+  .wrap{
+    width: 100%;
+  }
   .section-work {
     .work {
+      padding-left: 10px;
       .num {
-        margin-top: 140px;
+        margin-top: 144px;
         margin-left: 0;
         width: 20px;
         height: 30px;
+        padding-top: 4px;
+        font-size: 15px;
       }
       .two{
         margin-left: 199px;
@@ -1270,9 +1277,10 @@ body,html {
         display: none;
       }
       p {
-        top: 135px;
+        font-size: 12px;
+        top: 145px;
         left: 38px;
-        line-height: 0;
+        line-height: 1;
       }
       .p-two{
         top: 154px;
@@ -1280,7 +1288,72 @@ body,html {
       }
       .p-three {
         top: 181px;
-        left: 503px;
+        left: 488px;
+      }
+    }
+    h1 {
+      font-size: 36px;
+      padding-left: 10px;
+    }
+    .boss {
+      width: 311px;
+      height: 260px;
+      position: absolute;
+      right: 2px;
+      top: 312px;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+  }
+  .header {
+    .left-menu{
+      display: none;
+    }
+  }
+  .section-worst {
+    .hudshie{
+      .worst{
+        width: 100%;
+      }
+    }
+  }
+  .section-board {
+    .hudshie{
+      .board{
+        width: 100%;
+      }
+    }
+  }
+}
+.section-estimation {
+  .estimat {
+    width: 724px;
+    background-size: contain;
+    font-size: 40px;
+  }
+  .categories {
+    margin-left: 20px;
+    .kat1, .kat2,.kat4 {
+      div {
+        flex-basis: 15px;
+        h2{
+          font-size: 15px;
+        }
+        a {
+          font-size: 13px;
+        }
+      }
+    }
+  }
+}
+.section-safety {
+  .safety {
+    .safe {
+      .documents {
+        margin-left: 0;
+      }
+      .commission {
+        margin-top: 20px;
       }
     }
   }
